--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="RestaurantTab">
 
             <div class="RestaurantBox">
-                <a href="la_palette_du_gout.html">
+                <a href="RestaurantsPages/la_palette_du_gout.html">
                     <div class="RestaurantPic">
                         <img src="images/Restaurants/.jpg" alt="la_palette_du_gout">
                         <div class="New">Nouveau</div>
@@ -89,9 +89,9 @@
             </div>
 
             <div class="RestaurantBox">
-                <a href="la_note_enchantee.html">
+                <a href="RestaurantsPages/la_note_enchantee.html">
                     <div class="RestaurantPic">
-                        <img src="images/Restaurants/.jpg" alt="la_note_enchantee.html">
+                        <img src="images/Restaurants/.jpg" alt="la_note_enchantee">
                         <div class="New">Nouveau</div>
                     </div>
                     <div class="RestaurantDetails flex">
@@ -107,9 +107,9 @@
             </div>
 
             <div class="RestaurantBox">
-                <a href="a_la_francaise.html">
+                <a href="RestaurantsPages/a_la_francaise.html">
                     <div class="RestaurantPic">
-                        <img src="images/Restaurants/.jpg" alt="a_la_francaise.html">
+                        <img src="images/Restaurants/.jpg" alt="a_la_francaise">
                         <div class="New">Nouveau</div>
                     </div>
                     <div class="RestaurantDetails flex">
@@ -125,9 +125,9 @@
             </div>
 
             <div class="RestaurantBox">
-                <a href="le_delice_des_sens.html">
+                <a href="RestaurantsPages/le_delice_des_sens.html">
                     <div class="RestaurantPic">
-                        <img src="images/Restaurants/.jpg" alt="lle_delice_des_sens.html">
+                        <img src="images/Restaurants/.jpg" alt="lle_delice_des_sens">
                         <div class="New">Nouveau</div>
                     </div>
                     <div class="RestaurantDetails flex">
@@ -155,6 +155,6 @@
                 <li><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
             </ul>
         </footer>
-        
+
     </body>
     </html>
