--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="RestaurantBox">
                 <a href="RestaurantsPages/la_palette_du_gout.html">
                     <div class="RestaurantPic">
-                        <img src="images/Restaurants/.jpg" alt="la_palette_du_gout">
+                        <img src="images/Restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la_palette_du_gout">
                         <div class="New">Nouveau</div>
                     </div>
                     <div class="RestaurantDetails flex">
@@ -91,7 +91,7 @@
             <div class="RestaurantBox">
                 <a href="RestaurantsPages/la_note_enchantee.html">
                     <div class="RestaurantPic">
-                        <img src="images/Restaurants/.jpg" alt="la_note_enchantee">
+                        <img src="images/Restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la_note_enchantee">
                         <div class="New">Nouveau</div>
                     </div>
                     <div class="RestaurantDetails flex">
@@ -109,7 +109,7 @@
             <div class="RestaurantBox">
                 <a href="RestaurantsPages/a_la_francaise.html">
                     <div class="RestaurantPic">
-                        <img src="images/Restaurants/.jpg" alt="a_la_francaise">
+                        <img src="images/Restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="a_la_francaise">
                         <div class="New">Nouveau</div>
                     </div>
                     <div class="RestaurantDetails flex">
@@ -127,7 +127,7 @@
             <div class="RestaurantBox">
                 <a href="RestaurantsPages/le_delice_des_sens.html">
                     <div class="RestaurantPic">
-                        <img src="images/Restaurants/.jpg" alt="lle_delice_des_sens">
+                        <img src="images/Restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="lle_delice_des_sens">
                         <div class="New">Nouveau</div>
                     </div>
                     <div class="RestaurantDetails flex">
