--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!--En tete-->
 
        <header class="HomepageHeader flex">
-           <img src="images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
+           <img src="style/images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
        </header>
 
 <!--Ligne de localisation-->
