--- a/RestaurantsPages/la_note_enchantee.html
+++ b/RestaurantsPages/la_note_enchantee.html
@@ -1,26 +1,25 @@
-    <!DOCTYPE html>
-        <html lang="fr">
-        <head>
-            <meta charset="utf-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="style/style_main/style_main.css">
-            <link rel="stylesheet" href="style/style_header/style_header.css">
-            
-            <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
-            <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
-            <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
+<!DOCTYPE html>
+    <html lang="fr">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style/style_page.css">
 
-            <title>ohmyfood_La note enchantée</title>
-        </head>
-        <body>
+        <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
+        <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
+        <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet">
 
-    <!--En tete-->
+        <title>ohmyfood_La note enchantée</title>
+    </head>
+    <body>
+
+<!--En tete-->
     
-        <header class="HeaderPage flex">
-            <a ref="index.html" class="flex"><i class="fas fa-arrow-left"></i></a>
-            <h1>ohmyfood</h1>
-        </header>
+    <header class="HeaderPage flex">
+        <a ref="index.html" class="flex"><i class="fas fa-arrow-left"></i></a>
+        <h1>ohmyfood</h1>
+    </header>
 
     <!-- Menu du restaurant -->
         <div class="main">
