vf-noms restaurants

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <!--Bloc choix des restaurants-->
 
         <section class="restaurants">
-            <h2 id="restaurantAnchor">restaurants</h2>
+            <h2 id="restaurantAnchor">Restaurants</h2>
 
             <div class="restaurantsBox">
 
@@ -109,8 +109,8 @@
                     </a>
                     <div class="restaurantDetails flex">
                         <div class="detailsText flex">
-                            <p class="restaurantName">La palette du goût</p>
-                            <p>Ménilmontant</p>
+                            <p class="restaurantName">La note enchantée</p>
+                            <p>Charonne</p>
                         </div>
                         <div class="Like flex">
                             <svg id="fullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
@@ -135,8 +135,8 @@
                     </a>
                     <div class="restaurantDetails flex">
                         <div class="detailsText flex">
-                            <p class="restaurantName">La palette du goût</p>
-                            <p>Ménilmontant</p>
+                            <p class="restaurantName">A la francaise</p>
+                            <p>Cité Rouge</p>
                         </div>
                         <div class="Like flex">
                             <svg id="fullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
@@ -161,8 +161,8 @@
                     </a>
                     <div class="restaurantDetails flex">
                         <div class="detailsText flex">
-                            <p class="restaurantName">La palette du goût</p>
-                            <p>Ménilmontant</p>
+                            <p class="restaurantName">Le délice des sens</p>
+                            <p>Folie-Méricourt</p>
                         </div>
                         <div class="Like flex">
                             <svg id="fullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
