--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <div class="about">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a href="#restaurants_anchor" class="btn explore">explorer nos restaurants</a>
+            <a href="#restaurants_anchor" class="btn explore">Explorer nos restaurants</a>
         </div>
 
  <!--Bloc du fonctionnement du site-->
 
         <section class="howTo">
             <h2>Fonctionnement</h2>
-            <div class="howToList">
+            <div class="howToList flex">
 
                 <div class="howToStep flex">
                     <div class="stepNumber flex"><span>1</span></div>
@@ -72,7 +72,7 @@
         <section class="restaurants">
             <h2 id="restaurantAnchor">Restaurants</h2>
 
-            <div class="restaurantsBox">
+            <div class="restaurantsBox flex">
 
                 <div class="restaurantCard">
                     <a href="restaurantsPages/la_palette_du_gout.html">
