--- a/RestaurantsPages/la_note_enchantee.html
+++ b/RestaurantsPages/la_note_enchantee.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../style/style_page.css">
+        <link rel="stylesheet" href="../style/style_page_la_note_enchantee.css">
 
         <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet">
         <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet">
@@ -22,8 +22,8 @@
     </header>
 
 <!-- Introduction du restaurant -->
-    <div class="PagerestaurantCard"> <!-- class=main -->
-        <div class="PagerestaurantPic la_note_enchantee"></div>
+    <div class="pageRestaurantCard"> 
+        <div class="pageRestaurantPic la_note_enchantee"></div>
         <div class="restaurantName flex">
             <h2>La note enchantée</h2>
             <div class="Like flex">
@@ -42,134 +42,134 @@
         </div>
     </div>
 
-<!-- Section Menu -->
-    <section class="Menu">
+<!-- Section menu -->
+    <section class="menu">
 
     <!-- Section Entrées -->
-        <section class="StartersMenu">
+        <section class="startersMenu">
             <h3>Entrées</h3>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Ravioles de foie gras</p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Ravioles de foie gras</p>
                     <p>Accompagnés de leur crème à la truffe</p>
                 </div>
-                <div class="DishPrice">25€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">25€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Caviar osciètre</p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Caviar osciètre</p>
                     <p>Sur blini à la farine de blé noir</p>
                 </div>
-                <div class="DishPrice">35€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">35€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Homard et espuma de potiron</p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Homard et espuma de potiron</p>
                     <p>Mariné aux zestes d'orange</p>
                 </div>
-                <div class="DishPrice">20€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">20€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Foie gras de canard cuit entier</p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Foie gras de canard cuit entier</p>
                     <p>Confiture de figue et pain toasté</p>
                 </div>
-                <div class="DishPrice">35€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">35€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
         </section>
 
     <!-- Section Plats -->
-        <section class="MainsMenu">
+        <section class="mainsMenu">
             <h3>Plats</h3>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Noix de coquilles Saint-Jacques</p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Noix de coquilles Saint-Jacques</p>
                     <p>Sur lit de purée de céleri-rave</p>
                 </div>
-                <div class="DishPrice">40€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">40€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Langoustine poêlée</p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Langoustine poêlée</p>
                     <p>Purée de patate douce</p>
                 </div>
-                <div class="DishPrice">35€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">35€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Mijoté de queue de boeuf</p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Mijoté de queue de boeuf</p>
                     <p>Et riz sauvage aux zestes de citron</p>
                 </div>
-                <div class="DishPrice">44€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">44€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
         </section>
 
     <!-- Section Desserts -->
-        <section class="DessertsMenu">
+        <section class="dessertsMenu">
             <h3>Desserts</h3>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Macaron noisette et chocolat</p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Macaron noisette et chocolat</p>
                     <p>Glace au caramel brun et sel de Guérande</p>
                 </div>
-                <div class="DishPrice">18€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">18€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Baba au rhum revisité </p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Baba au rhum revisité </p>
                     <p>Avec son coulis de citron</p>
                 </div>
-                <div class="DishPrice">22€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">22€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
 
-            <div class="DishOptions">
-                <div class="DishText">
-                    <p class="DishName">Tarte au citron meringuée</p>
+            <div class="dishOptions">
+                <div class="dishText flex">
+                    <p class="dishName">Tarte au citron meringuée</p>
                     <p>Déstructurée</p>
                 </div>
-                <div class="DishPrice">23€</div>
-                <div class="Check">
-                    <div class="CheckIcon"><i class="fas fa-check-circle"></i></div>
+                <div class="dishPrice">23€</div>
+                <div class="check">
+                    <div class="checkIcon"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
         </section>
-        <div class="Button">
+        <div class="button">
             <button class="btn">Commander</button>
         </div>
     </section>
