--- a/RestaurantsPages/la_note_enchantee.html
+++ b/RestaurantsPages/la_note_enchantee.html
@@ -15,9 +15,8 @@
     <body>
 
 <!--En tete-->
-    
     <header class="pageHeader">
-        <a ref="index.html"><i class="fas fa-arrow-left"></i></a>
+        <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="../style/images/logo/ohmyfood@2x.svg" alt="Logo ohmyfood">
     </header>
 
@@ -43,7 +42,7 @@
     </div>
 
 <!-- Section menu -->
-    <section class="menu">
+    <div class="menu">
 
     <!-- Section Entrées -->
         <section class="startersMenu">
@@ -169,10 +168,12 @@
                 </div>
             </div>
         </section>
+
         <div class="button">
             <button class="btn">Commander</button>
         </div>
-    </section>
+
+    </div>
 
     <!-- Pied de page -->
         <footer>
